Return reviews when assigning PRs